<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:contentDescription="@string/description_main_activity"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/home_welcomeToNOA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/view_welcome_text_shadow"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/view_welcome"
        android:textColor="@color/black_overlay"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_noaLogo"
        app:layout_constraintVertical_bias="0.251" />

    <ImageView
        android:id="@+id/home_noaLogo"
        android:layout_width="328dp"
        android:layout_height="304dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/description_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_black" />

    <Button
        android:id="@+id/home_seeApprenticesButton"
        android:layout_width="227dp"
        android:layout_height="41dp"
        android:background="@color/button_color"
        android:text="@string/view_see_apprentices"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_welcomeToNOA"
        app:layout_constraintVertical_bias="0.298" />

</androidx.constraintlayout.widget.ConstraintLayout>